# eomlm-2026

./: .gitignore  README.md  main.py  pyproject.toml
nbs/: EMLM_Exercise1_Robert_Siipola.ipynb  EMLM_Exercise1_template.ipynb  EMLM_Exercise2_Robert_Siipola.ipynb  exercise-3-robert-siipola.ipynb
